--- a/style.css
+++ b/style.css
@@ -1,5 +1,6 @@
 html {
   height: 100%;
+  /* width: 100%; */
 }
 
 * {
@@ -10,21 +11,27 @@ body {
   display: flex;
   justify-content: center;
   background-color: rgb(5, 5, 10);
-  min-width: 100%;
+  /* min-width: 100%; */
+  width: fit-content;
+  width: 100%;
+  /* will implement for smaller screens */
+  /* width: 122.9rem; */
   /* max-width: 75%; */
   min-height: 100%;
-  margin: auto;
+  /* margin: auto; */
 }
 
 #information {
   display: flex;
   flex-direction: column;
+  /* flex-grow: 3; */
   position: relative;
   min-height: 115%;
   /* testing the width of #information */
   /* max-width: 75%; */
-  width: 55%;
-  gap: 0;
+  /* width: 100%; */
+  /* overflow-x: hidden; */
+  /* gap: 0; */
   right: 3.264rem;
 }
 
@@ -32,6 +39,7 @@ body {
   position: relative;
   background-color: rgb(248, 246, 243);
   min-height: calc(100% / 3);
+  width: 100%;
 }
 
 .p1-p2 {
@@ -49,6 +57,7 @@ body {
   position: relative;
   background-color: rgb(255, 255, 255);
   min-height: calc(100% / 3);
+  width: 100%;
 }
 
 
@@ -60,17 +69,11 @@ body {
   max-width: auto;
 }
 
-/* input[type="text"]{
-  max-width:250px;
-} */
-/* input[type="number"]{
-  width:250px;
-} */
-
 #bottom {
   position: relative;
   background-color: rgb(248, 246, 243);
   min-height: calc(100% / 3);
+  width: 100%;
 }
 
 #image {
@@ -79,9 +82,8 @@ body {
   /* max-width: 50%; */
   /* width: 50%; */
   /* max-width: 540px; */
-
   /* width: 540px; */
-  width: 30rem;
+  /* width: 30rem; */
   max-width: 33rem;
 
 }
@@ -165,59 +167,261 @@ label {
 
 /* Media Queries */
 
-@media(max-width: 815px) {
+@media only screen and (max-width: 1536px) {
+
+  body {
+    display: flex;
+    justify-content: center;
+    position: relative;
+    max-width: 1336px;
+    left: 5rem;
+  }
+
   #middle {
     /* display: flex; */
     /* flex-direction: column; */
     background-color: firebrick;
   }
 
+  #information {
+    position: relative;
+    display: flex;
+    flex-direction: column;
+    min-height: 115%;
+    width: fit-content;
+    gap: 0;
+  }
+
+
+}
+
+/* XL */
+@media only screen and (max-width: 1280px) {
+
   body {
     display: flex;
     justify-content: center;
     position: relative;
-    /* background-color: rgb(5, 5, 10); */
     width: 100%;
-    /* max-width: 100%; */
-    /* min-height: 100%; */
-    /* margin: auto; */
-    /* margin: 0; */
-    /* flex-grow: 1; */
-    /* left: 1rem; */
+    left: 3rem;
+  }
+
+  .p1-p2 {
+    position: relative;
+    font-size: large;
+    top: 25px;
+    left: 2em;
+  }
+
+  #paragraph-one {
+    font-size: 1.2em;
+    max-width: 60%;
+  }
+
+  #paragraph-two {
+    font-size: 1.2em;
+  }
+
+  #middle {
+    /* display: flex; */
+    /* flex-direction: column; */
+    background-color: dodgerblue;
   }
 
   #information {
+    position: relative;
     display: flex;
     flex-direction: column;
     min-height: 115%;
-    width: 50rem;
-    /* min-width: 100%; */
+    width: fit-content;
     gap: 0;
-    /* padding: 0 1rem 0 0; */
-    left:1rem;
   }
 
-  /* #image {
-    width: 1rem;
-  } */
+  #title {
+    position: absolute;
+    top: 0em;
+    left: 2em;
+  }
+
+
+  .first-name {
+    position: absolute;
+    top: 2.5rem;
+    left: 2em;
+  }
 
   .last-name {
     position: absolute;
     top: 2.5rem;
-    left: 13em;
-    /* left: 51%; */
+    left: 20em;
   }
 
-  /* .email {
+  .email {
     position: absolute;
     top: 5.5em;
     left: 2em;
-  } */
+  }
 
-  /* .phone-number { */
-    /* position: absolute; */
-    /* top: 5.5em; */
-    /* left: 13em; */
-    /* left: 12em; */
-  /* } */
+  .phone-number {
+    position: absolute;
+    top: 5.5em;
+    left: 20em;
+  }
+
+  .password {
+    position: absolute;
+    top: 8.5em;
+    left: 2em;
+  }
+
+  .password-confirm {
+    position: absolute;
+    top: 8.5em;
+    left: 20em;
+  }
+
+  .form-labels label {
+    font-size: .7em;
+  }
+
+  .form-labels input {
+    width: 17.5em;
+    height: 2.5em;
+    border-radius: 5px;
+  }
+}
+
+/* LARGE */
+@media only screen and (max-width: 1024px) {
+
+  #middle {
+    /* display: flex; */
+    /* flex-direction: column; */
+    background-color: midnightblue;
+  }
+
+  body {
+    display: flex;
+    justify-content: center;
+    position: relative;
+    width: 100%;
+    left: 3rem;
+  }
+
+  #information {
+    position: relative;
+    display: flex;
+    flex-direction: column;
+    min-height: 115%;
+    width: fit-content;
+    gap: 0;
+  }
+}
+
+/* MEDIUM */
+@media only screen and (max-width: 768px) {
+
+  #middle {
+    /* display: flex; */
+    /* flex-direction: column; */
+    background-color: tomato;
+  }
+
+  body {
+    display: flex;
+    justify-content: center;
+    position: relative;
+    max-width: 1336px;
+    left: 5rem;
+  }
+
+  #information {
+    position: relative;
+    display: flex;
+    flex-direction: column;
+    min-height: 115%;
+    width: fit-content;
+    gap: 0;
+  }
+
+  /* SMALL */
+  @media only screen and (max-width: 640px) {
+
+    #middle {
+      /* display: flex; */
+      /* flex-direction: column; */
+      background-color: wheat;
+    }
+
+    body {
+      display: flex;
+      justify-content: center;
+      position: relative;
+      max-width: 1336px;
+      left: 5rem;
+    }
+
+    #information {
+      position: relative;
+      display: flex;
+      flex-direction: column;
+      min-height: 115%;
+      width: fit-content;
+      gap: 0;
+    }
+
+    .form-inputs {
+      position: relative;
+      font-size: large;
+      font-weight: 100;
+    }
+
+    #title {
+      position: absolute;
+      top: 0em;
+      left: 2em;
+    }
+
+
+    .first-name {
+      position: relative;
+      top: 2.5rem;
+      left: 2em;
+    }
+
+    .last-name {
+      position: relative;
+      top: 2.5rem;
+      left: 13em;
+    }
+
+    .email {
+      position: absolute;
+      top: 5.5em;
+      left: 2em;
+    }
+
+    .phone-number {
+      position: absolute;
+      top: 5.5em;
+      left: 13em;
+    }
+
+    .password {
+      position: absolute;
+      top: 8.5em;
+      left: 2em;
+    }
+
+    .password-confirm {
+      position: absolute;
+      top: 8.5em;
+      left: 13em;
+    }
+
+    label {
+      font-weight: 550;
+      font-size: small;
+    }
+  }
 }
