--- a/style.css
+++ b/style.css
@@ -65,15 +65,6 @@ body {
   width: 100%;
 }
 
-/*
-.form-labels label {
-  font-size: xx-small;
-}
-
-.form-labels input {
-  max-width: auto;
-} */
-
 #bottom {
   position: relative;
   background-color: rgb(248, 246, 243);
@@ -82,6 +73,7 @@ body {
 }
 
 #image {
+  position: relative;
   /* height: 959px; */
   min-height: 115%;
   /* max-width: 50%; */
@@ -403,37 +395,37 @@ label {
 
   .first-name {
     position: absolute;
-    top: 2.5rem;
+    top: 3em;
     left: 2em;
   }
 
   .last-name {
     position: absolute;
-    top: 2.5rem;
+    top: 3em;
     left: 17.5em;
   }
 
   .email {
     position: absolute;
-    top: 5.5em;
+    top: 7em;
     left: 2em;
   }
 
   .phone-number {
     position: absolute;
-    top: 5.5em;
+    top: 7em;
     left: 17.5em;
   }
 
   .password {
     position: absolute;
-    top: 8.5em;
+    top: 11em;
     left: 2em;
   }
 
   .password-confirm {
     position: absolute;
-    top: 8.5em;
+    top: 11em;
     left: 17.5em;
   }
 
@@ -442,8 +434,8 @@ label {
   }
 
   .form-labels input {
-    width: 15.5em;
-    height: 2.5em;
+    width: 11.5em;
+    height: 2.1em;
     border-radius: 5px;
   }
 }
@@ -476,37 +468,37 @@ label {
 
   .first-name {
     position: absolute;
-    top: 2.5em;
+    top: 3em;
     left: 2em;
   }
 
   .last-name {
     position: absolute;
-    top: 2.5em;
+    top: 3em;
     left: 12em;
   }
 
   .email {
     position: absolute;
-    top: 5.5em;
+    top: 7em;
     left: 2em;
   }
 
   .phone-number {
     position: absolute;
-    top: 5.5em;
+    top: 7em;
     left: 12em;
   }
 
   .password {
     position: absolute;
-    top: 8.5em;
+    top: 11em;
     left: 2em;
   }
 
   .password-confirm {
     position: absolute;
-    top: 8.5em;
+    top: 11em;
     left: 12em;
   }
 
@@ -515,8 +507,8 @@ label {
   }
 
   .form-labels input {
-    width: 9.5em;
-    height: 2.5em;
+    width: 8.3em;
+    height: 2em;
     border-radius: 5px;
   }
 }
@@ -609,7 +601,7 @@ label {
 
   .form-labels input {
     width: 7.5em;
-    height: 2.5em;
+    height: 2em;
     border-radius: 5px;
   }
 }
