--- a/style.css
+++ b/style.css
@@ -128,7 +128,7 @@ ul {
 }
 
 .middle-container {
-  box-shadow: 0px 5px 20px rgb(174, 173, 173);
+  box-shadow: 0px 4px 7px rgb(211, 211, 211);
   position: relative;
   background-color: rgb(255, 255, 255);
   min-height: calc(100% / 3);
@@ -142,6 +142,7 @@ ul {
   position: relative;
   font-size: large;
   font-weight: 100;
+  /* border: solid; */
 }
 
 #title {
@@ -155,6 +156,8 @@ ul {
   position: absolute;
   top: 2.5em;
   left: 2em;
+  /* top: 5.5em; */
+  /* left: 2em; */
 }
 
 .last-name {
@@ -197,6 +200,7 @@ label {
   top: 10%;
   left: 5%;
 }
+
 
 .form-labels label {
   font-size: .7em;
@@ -336,6 +340,8 @@ label {
     position: absolute;
     top: 3em;
     left: 2em;
+    /* top: 0; */
+    /* left: 0; */
   }
 
   .last-name {
