--- a/style copy.css
+++ b/style copy.css
@@ -1,6 +1,6 @@
 html {
   height: 100%;
-  /* width: 100%; */
+  width: 100%;
 }
 
 * {
@@ -10,99 +10,37 @@ html {
 body {
   display: flex;
   justify-content: center;
+  flex: 1;
   background-color: rgb(5, 5, 10);
-  /* min-width: 100%; */
-  width: fit-content;
-  width: 100%;
-  /* will implement for smaller screens */
-  /* width: 122.9rem; */
+  gap: 0.5px;
+  margin: 0;
   max-width: 75%;
-  min-height: 100%;
+  height: 100%;
   margin: auto;
 }
 
-#information {
-  display: flex;
-  flex-direction: column;
-  /* flex-grow: 3; */
-  position: relative;
-  min-height: 115%;
-  /* testing the width of #information */
-  /* max-width: 75%; */
-  /* width: 100%; */
-  /* overflow-x: hidden; */
-  /* gap: 0; */
-  right: 3.264rem;
-}
 
-#top {
-  position: relative;
-  background-color: rgb(248, 246, 243);
-  min-height: calc(100% / 3);
-  width: 100%;
-  z-index: 2;
-}
 
-.p1-p2 {
-  position: relative;
-  /* font-size: large; */
-  font-size: 18px;
-  top: 70px;
-  left: 5%;
-}
-
-#paragraph-one {
-  max-width: 40%;
-}
-
-#paragraph-one #paragraph-two {
-  left: 2em;
-}
-
-#middle {
-  /* position: relative; */
-  /* background-color: rgb(255, 255, 255); */
-  /* min-height: calc(100% / 3); */
-  /* width: 100%; */
-  /* box-shadow: 0px 5px 8px 2px gray; */
-  /* filter: drop-shadow(.75em .75em .5em); */
-  /* box-shadow: inset 5em 1em gold; */
-}
-
-#bottom {
-  position: relative;
-  background-color: rgb(248, 246, 243);
-  min-height: calc(100% / 3);
-  width: 100%;
-}
-
+/* Left side of the screen Image section */
 #image {
   position: relative;
-  /* height: 959px; */
-  min-height: 115%;
-  /* max-width: 50%; */
-  /* width: 50%; */
-  /* max-width: 540px; */
-  /* width: 540px; */
-  /* width: 30rem; */
+  min-height: 100%;
   max-width: 33rem;
 }
-
 #image img {
+  flex: 1;
   width: 100%;
   height: 100%;
+  object-fit: cover;
+  z-index: -1;
 }
-
 .banner {
   position: absolute;
-  /* border: solid snow; */
   top: 13.5em;
   width: 100%;
   height: 8em;
   background: rgba(24, 24, 24, 0.5);
-
 }
-
 .title-text {
   position: relative;
   color: whitesmoke;
@@ -111,22 +49,51 @@ body {
   opacity: 1;
   font-size: 60px;
 }
-
-.container {
+.logo-container {
   position: relative;
   width: 100px;
   height: 120px;
   left: 5.5em;
 }
 
+
+
+
+/* Right side of the page where information, form, submit button is place */
+#information {
+  display: flex;
+  flex-direction: column;
+  min-height: 100%;
+}
+
+/* Right side - Top section mostly paragraph text */
+#top {
+  position: relative;
+  background-color: rgb(248, 246, 243);
+  min-height: calc(100% / 3);
+  width: 100%;
+  z-index: 2;
+}
+.p1-p2 {
+  position: relative;
+  font-size: 22px;
+  top: 70px;
+  left: 6.2%;
+}
+#paragraph-one {
+  max-width: 55%;
+}
+#paragraph-one #paragraph-two {
+  left: 2em;
+}
 p {
   font-family: 'Cabin Sketch', cursive;
 }
 
-ul {
-  list-style-type: none;
-}
 
+
+
+/* Right side - Middile section where form information is located */
 .middle-container {
   box-shadow: 0px 4px 7px rgb(211, 211, 211);
   position: relative;
@@ -134,83 +101,72 @@ ul {
   min-height: calc(100% / 3);
   width: 100%;
   z-index: 1;
-  /* padding: 2em; */
 }
-
-/* setting up form-inputs */
-.form-inputs {
-  /* position: relative; */
-  font-size: large;
-  font-weight: 100;
-  /* border: solid; */
+ul {
+  list-style-type: none;
 }
-
 #title {
   position: absolute;
-  top: 0em;
-  left: 2em;
+  left: 6.2%;
 }
-
-
+label {
+  font-weight: 550;
+  font-size: small;
+}
+/* Right side -  Start of inputs located inside the form */
 .first-name {
   position: absolute;
-  /* top: 2.5em; */
-  /* left: 2em; */
-  top: 18%;
-  /* bottom: 0%; */
+  top: 13%;
   left: 6.2%;
 }
-
 .last-name {
   position: absolute;
-  top: 2.5em;
-  left: 16em;
+  top: 13%;
+  left: 44%;
 }
-
 .email {
   position: absolute;
-  top: 38%;
+  top: 42%;
   left: 6.2%;
 }
-
 .phone-number {
   position: absolute;
-  top: 7em;
-  left: 16em;
+  top: 42%;
+  left: 44%;
 }
-
 .password {
   position: absolute;
   bottom: 8%;
   left: 6.2%;
 }
-
 .password-confirm {
   position: absolute;
-  top: 11.5em;
-  left: 16em;
+  bottom: 8%;
+  left: 44%;
+}
+.form-labels label {
+  font-size: .7em;
+}
+.form-labels input {
+  width: 125%;
+  height: 1.7em;
+  min-height: 1.5em;
+  border-radius: 5px;
+  font-size: 18px;
+  font-weight: bolder;
 }
 
-label {
-  font-weight: 550;
-  font-size: small;
-}
 
+
+/* Bottom section with create account button */
+#bottom {
+  position: relative;
+  background-color: rgb(248, 246, 243);
+  min-height: calc(100% / 3);
+  width: 100%;
+}
 .bottom-info {
   position: relative;
   top: 10%;
   left: 5%;
-}
-
-
-.form-labels label {
-  font-size: .7em;
-}
-
-.form-labels input {
-  width: 9em;
-  height: 1.9em;
-  border-radius: 5px;
-  font-size: 18px;
-  font-weight: bolder;
 }
