--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 html {
   height: 100%;
-  /* width: 100%; */
+  width: 100%;
 }
 
 * {
@@ -10,97 +10,38 @@ html {
 body {
   display: flex;
   justify-content: center;
+  flex: 1;
   background-color: rgb(5, 5, 10);
-  /* min-width: 100%; */
-  width: fit-content;
-  width: 100%;
-  /* will implement for smaller screens */
-  /* width: 122.9rem; */
+  gap: 0.5px;
+  margin: 0;
   max-width: 75%;
-  min-height: 100%;
+  height: 100%;
   margin: auto;
 }
 
-#information {
-  display: flex;
-  flex-direction: column;
-  /* flex-grow: 3; */
-  position: relative;
-  min-height: 115%;
-  /* testing the width of #information */
-  /* max-width: 75%; */
-  /* width: 100%; */
-  /* overflow-x: hidden; */
-  /* gap: 0; */
-  right: 3.264rem;
-}
 
-#top {
-  position: relative;
-  background-color: rgb(248, 246, 243);
-  min-height: calc(100% / 3);
-  width: 100%;
-  z-index: 2;
-}
 
-.p1-p2 {
-  position: relative;
-  /* font-size: large; */
-  font-size: 18px;
-  top: 70px;
-  left: 2em;
-}
-
-#paragraph-one {
-  max-width: 40%;
-}
-
-#paragraph-one #paragraph-two {
-  left: 2em;
-}
-
-#middle {
-  /* position: relative; */
-  /* background-color: rgb(255, 255, 255); */
-  /* min-height: calc(100% / 3); */
-  /* width: 100%; */
-  /* box-shadow: 0px 5px 8px 2px gray; */
-  /* filter: drop-shadow(.75em .75em .5em); */
-  /* box-shadow: inset 5em 1em gold; */
-}
-
-#bottom {
-  position: relative;
-  background-color: rgb(248, 246, 243);
-  min-height: calc(100% / 3);
-  width: 100%;
-}
-
+/* Left side of the screen Image section */
 #image {
   position: relative;
-  /* height: 959px; */
-  min-height: 115%;
-  /* max-width: 50%; */
-  /* width: 50%; */
-  /* max-width: 540px; */
-  /* width: 540px; */
-  /* width: 30rem; */
+  min-height: 100%;
   max-width: 33rem;
 }
 
 #image img {
+  flex: 1;
   width: 100%;
   height: 100%;
+  object-fit: cover;
+  z-index: -1;
 }
 
 .banner {
   position: absolute;
-  /* border: solid snow; */
   top: 13.5em;
   width: 100%;
   height: 8em;
   background: rgba(24, 24, 24, 0.5);
-
 }
 
 .title-text {
@@ -112,21 +53,55 @@ body {
   font-size: 60px;
 }
 
-.container {
+.logo-container {
   position: relative;
   width: 100px;
   height: 120px;
   left: 5.5em;
 }
 
+
+
+
+/* Right side of the page where information, form, submit button is place */
+#information {
+  display: flex;
+  flex-direction: column;
+  min-height: 100%;
+}
+
+/* Right side - Top section mostly paragraph text */
+#top {
+  position: relative;
+  background-color: rgb(248, 246, 243);
+  min-height: calc(100% / 3);
+  width: 100%;
+  z-index: 2;
+}
+
+.p1-p2 {
+  position: relative;
+  font-size: 22px;
+  top: 70px;
+  left: 6.2%;
+}
+
+#paragraph-one {
+  max-width: 55%;
+}
+
+#paragraph-one #paragraph-two {
+  left: 2em;
+}
+
 p {
   font-family: 'Cabin Sketch', cursive;
 }
 
-ul {
-  list-style-type: none;
-}
 
+
+
+/* Right side - Middile section where form information is located */
 .middle-container {
   box-shadow: 0px 4px 7px rgb(211, 211, 211);
   position: relative;
@@ -134,60 +109,15 @@ ul {
   min-height: calc(100% / 3);
   width: 100%;
   z-index: 1;
-  /* padding: 2em; */
 }
 
-/* setting up form-inputs */
-.form-inputs {
-  position: relative;
-  font-size: large;
-  font-weight: 100;
-  /* border: solid; */
+ul {
+  list-style-type: none;
 }
 
 #title {
   position: absolute;
-  top: 0em;
-  left: 2em;
-}
-
-
-.first-name {
-  position: absolute;
-  top: 2.5em;
-  left: 2em;
-  /* top: 5.5em; */
-  /* left: 2em; */
-}
-
-.last-name {
-  position: absolute;
-  top: 2.5em;
-  left: 31.5em;
-}
-
-.email {
-  position: absolute;
-  top: 7em;
-  left: 2em;
-}
-
-.phone-number {
-  position: absolute;
-  top: 7em;
-  left: 31.5em;
-}
-
-.password {
-  position: absolute;
-  top: 11.5em;
-  left: 2em;
-}
-
-.password-confirm {
-  position: absolute;
-  top: 11.5em;
-  left: 31.5em;
+  left: 6.2%;
 }
 
 label {
@@ -195,681 +125,68 @@ label {
   font-size: small;
 }
 
-.bottom-info {
-  position: relative;
-  top: 10%;
-  left: 5%;
+/* Right side -  Start of inputs located inside the form */
+.first-name {
+  position: absolute;
+  top: 13%;
+  left: 6.2%;
 }
 
+.last-name {
+  position: absolute;
+  top: 13%;
+  left: 44%;
+}
+
+.email {
+  position: absolute;
+  top: 42%;
+  left: 6.2%;
+}
+
+.phone-number {
+  position: absolute;
+  top: 42%;
+  left: 44%;
+}
+
+.password {
+  position: absolute;
+  bottom: 8%;
+  left: 6.2%;
+}
+
+.password-confirm {
+  position: absolute;
+  bottom: 8%;
+  left: 44%;
+}
 
 .form-labels label {
   font-size: .7em;
 }
 
 .form-labels input {
-  width: 20em;
-  height: 2.5em;
+  width: 125%;
+  height: 1.7em;
+  min-height: 1.5em;
   border-radius: 5px;
   font-size: 18px;
   font-weight: bolder;
 }
 
-/* Media Queries */
-/* XXL+ */
-@media only screen and (max-width: 1939px) {
-
-  body {
-    display: flex;
-    justify-content: center;
-    position: relative;
-    max-width: 1336px;
-    left: 5rem;
-  }
-
-  #information {
-    position: relative;
-    display: flex;
-    flex-direction: column;
-    min-height: 115%;
-    width: fit-content;
-    gap: 0;
-  }
-
-  #paragraph-one {
-    font-size: 1.2em;
-    max-width: 75%;
-  }
-
-  #paragraph-two {
-    font-size: 1.2em;
-  }
-
-  #title {
-    position: absolute;
-    top: 0em;
-    left: 2em;
-  }
 
 
-  .first-name {
-    position: absolute;
-    top: 3em;
-    left: 2em;
-  }
-
-  .last-name {
-    position: absolute;
-    top: 3em;
-    left: 23.5em;
-  }
-
-  .email {
-    position: absolute;
-    top: 7em;
-    left: 2em;
-  }
-
-  .phone-number {
-    position: absolute;
-    top: 7em;
-    left: 23.5em;
-  }
-
-  .password {
-    position: absolute;
-    top: 11em;
-    left: 2em;
-  }
-
-  .password-confirm {
-    position: absolute;
-    top: 11em;
-    left: 23.5em;
-  }
-
-  .form-labels label {
-    font-size: .7em;
-  }
-
-  .form-labels input {
-    width: 16.5em;
-    height: 2.2em;
-    border-radius: 5px;
-  }
+/* Bottom section with create account button */
+#bottom {
+  position: relative;
+  background-color: rgb(248, 246, 243);
+  min-height: calc(100% / 3);
+  width: 100%;
 }
 
-
-/* Media Queries */
-/* XXL */
-@media only screen and (max-width: 1536px) {
-
-  body {
-    display: flex;
-    justify-content: center;
-    position: relative;
-    max-width: 1336px;
-    left: 5rem;
-  }
-
-  #information {
-    position: relative;
-    display: flex;
-    flex-direction: column;
-    min-height: 115%;
-    width: fit-content;
-    gap: 0;
-  }
-
-  #paragraph-one {
-    font-size: 1.2em;
-    max-width: 75%;
-  }
-
-  #paragraph-two {
-    font-size: 1.2em;
-  }
-
-  #title {
-    position: absolute;
-    top: 0em;
-    left: 2em;
-  }
-
-
-  .first-name {
-    position: absolute;
-    top: 3em;
-    left: 2em;
-    /* top: 0; */
-    /* left: 0; */
-  }
-
-  .last-name {
-    position: absolute;
-    top: 3em;
-    left: 23em;
-  }
-
-  .email {
-    position: absolute;
-    top: 7em;
-    left: 2em;
-  }
-
-  .phone-number {
-    position: absolute;
-    top: 7em;
-    left: 23em;
-  }
-
-  .password {
-    position: absolute;
-    top: 11em;
-    left: 2em;
-  }
-
-  .password-confirm {
-    position: absolute;
-    top: 11em;
-    left: 23em;
-  }
-
-  .form-labels label {
-    font-size: .7em;
-  }
-
-  .form-labels input {
-    width: 15.5em;
-    height: 2.2em;
-    border-radius: 5px;
-  }
-}
-
-/* XL */
-@media only screen and (max-width: 1280px) {
-
-  body {
-    display: flex;
-    justify-content: center;
-    position: relative;
-    width: 100%;
-    left: 3rem;
-  }
-
-  .p1-p2 {
-    position: relative;
-    font-size: large;
-    top: 4em;
-    left: 2em;
-  }
-
-  #paragraph-one {
-    font-size: 1.2em;
-    max-width: 75%;
-  }
-
-  #paragraph-two {
-    font-size: 1.2em;
-  }
-
-  #information {
-    position: relative;
-    display: flex;
-    flex-direction: column;
-    min-height: 115%;
-    width: fit-content;
-    gap: 0;
-  }
-
-  #title {
-    position: absolute;
-    top: 0em;
-    left: 2em;
-  }
-
-
-  .first-name {
-    position: absolute;
-    top: 3em;
-    left: 2em;
-  }
-
-  .last-name {
-    position: absolute;
-    top: 3em;
-    left: 21.5em;
-  }
-
-  .email {
-    position: absolute;
-    top: 7em;
-    left: 2em;
-  }
-
-  .phone-number {
-    position: absolute;
-    top: 7em;
-    left: 21.5em;
-  }
-
-  .password {
-    position: absolute;
-    top: 11em;
-    left: 2em;
-  }
-
-  .password-confirm {
-    position: absolute;
-    top: 11em;
-    left: 21.5em;
-  }
-
-  .form-labels label {
-    font-size: .7em;
-  }
-
-  .form-labels input {
-    width: 14em;
-    height: 2.2em;
-    border-radius: 5px;
-  }
-}
-
-/* Breaking point 1108 px */
-@media only screen and (max-width: 1108px) {
-
-  body {
-    display: flex;
-    justify-content: center;
-    position: relative;
-    width: 100%;
-    left: 3rem;
-  }
-
-  .p1-p2 {
-    position: relative;
-    font-size: large;
-    top: 4em;
-    left: 2em;
-  }
-
-  #paragraph-one {
-    font-size: 1.2em;
-    max-width: 75%;
-  }
-
-  #paragraph-two {
-    font-size: 1.2em;
-  }
-
-  #middle {
-    /* display: flex; */
-    /* flex-direction: column; */
-
-  }
-
-  #information {
-    position: relative;
-    display: flex;
-    flex-direction: column;
-    min-height: 115%;
-    width: fit-content;
-    gap: 0;
-  }
-
-  #title {
-    position: absolute;
-    top: 0em;
-    left: 2em;
-  }
-
-
-  .first-name {
-    position: absolute;
-    top: 3em;
-    left: 2em;
-  }
-
-  .last-name {
-    position: absolute;
-    top: 3em;
-    left: 20em;
-  }
-
-  .email {
-    position: absolute;
-    top: 7em;
-    left: 2em;
-  }
-
-  .phone-number {
-    position: absolute;
-    top: 7em;
-    left: 20em;
-  }
-
-  .password {
-    position: absolute;
-    top: 11em;
-    left: 2em;
-  }
-
-  .password-confirm {
-    position: absolute;
-    top: 11em;
-    left: 20em;
-  }
-
-  .form-labels label {
-    font-size: .7em;
-  }
-
-  .form-labels input {
-    width: 12em;
-    height: 2.1em;
-    border-radius: 5px;
-  }
-}
-
-/* LARGE */
-@media only screen and (max-width: 1024px) {
-
-  body {
-    display: flex;
-    justify-content: center;
-    position: relative;
-    width: 100%;
-    left: 3rem;
-  }
-
-  #information {
-    position: relative;
-    display: flex;
-    flex-direction: column;
-    min-height: 115%;
-    width: fit-content;
-    gap: 0;
-  }
-
-  #title {
-    position: absolute;
-    top: 0em;
-    left: 2em;
-  }
-
-
-  .first-name {
-    position: absolute;
-    top: 3em;
-    left: 2em;
-  }
-
-  .last-name {
-    position: absolute;
-    top: 3em;
-    left: 17.5em;
-  }
-
-  .email {
-    position: absolute;
-    top: 7em;
-    left: 2em;
-  }
-
-  .phone-number {
-    position: absolute;
-    top: 7em;
-    left: 17.5em;
-  }
-
-  .password {
-    position: absolute;
-    top: 11em;
-    left: 2em;
-  }
-
-  .password-confirm {
-    position: absolute;
-    top: 11em;
-    left: 17.5em;
-  }
-
-  .form-labels label {
-    font-size: .7em;
-  }
-
-  .form-labels input {
-    width: 11.5em;
-    height: 2.1em;
-    border-radius: 5px;
-  }
-}
-
-/* Breaking point 954px */
-@media only screen and (max-width: 954px) {
-
-  body {
-    display: flex;
-    justify-content: center;
-    position: relative;
-    width: 100%;
-    left: 3rem;
-  }
-
-  #information {
-    position: relative;
-    display: flex;
-    flex-direction: column;
-    min-height: 115%;
-    width: fit-content;
-    gap: 0;
-  }
-
-  #title {
-    position: absolute;
-    top: 0em;
-    left: 2em;
-  }
-
-
-  .first-name {
-    position: absolute;
-    top: 3em;
-    left: 2em;
-  }
-
-  .last-name {
-    position: absolute;
-    top: 3em;
-    left: 15em;
-  }
-
-  .email {
-    position: absolute;
-    top: 7em;
-    left: 2em;
-  }
-
-  .phone-number {
-    position: absolute;
-    top: 7em;
-    left: 15em;
-  }
-
-  .password {
-    position: absolute;
-    top: 11em;
-    left: 2em;
-  }
-
-  .password-confirm {
-    position: absolute;
-    top: 11em;
-    left: 15em;
-  }
-
-  .form-labels label {
-    font-size: .7em;
-  }
-
-  .form-labels input {
-    width: 10em;
-    height: 2em;
-    border-radius: 5px;
-  }
-}
-
-/* MEDIUM */
-@media only screen and (max-width: 768px) {
-
-  body {
-    display: flex;
-    justify-content: center;
-    position: relative;
-    max-width: 1336px;
-    left: 5rem;
-  }
-
-  #information {
-    position: relative;
-    display: flex;
-    flex-direction: column;
-    min-height: 115%;
-    width: fit-content;
-    gap: 0;
-  }
-
-  .first-name {
-    position: absolute;
-    top: 3em;
-    left: 2em;
-  }
-
-  .last-name {
-    position: absolute;
-    top: 3em;
-    left: 12em;
-  }
-
-  .email {
-    position: absolute;
-    top: 7em;
-    left: 2em;
-  }
-
-  .phone-number {
-    position: absolute;
-    top: 7em;
-    left: 12em;
-  }
-
-  .password {
-    position: absolute;
-    top: 11em;
-    left: 2em;
-  }
-
-  .password-confirm {
-    position: absolute;
-    top: 11em;
-    left: 12em;
-  }
-
-  .form-labels label {
-    font-size: .7em;
-  }
-
-  .form-labels input {
-    width: 8.3em;
-    height: 2em;
-    border-radius: 5px;
-  }
-}
-
-/* SMALL */
-@media only screen and (max-width: 640px) {
-
-
-  body {
-    display: flex;
-    justify-content: center;
-    position: relative;
-    /* max-width: 1336px; */
-    left: 5rem;
-  }
-
-  #information {
-    position: relative;
-    display: flex;
-    flex-direction: column;
-    min-height: 115%;
-    width: fit-content;
-    gap: 0;
-  }
-
-  .form-inputs {
-    position: relative;
-    font-size: large;
-    font-weight: 100;
-  }
-
-  #title {
-    position: absolute;
-    top: 0em;
-    left: 2em;
-  }
-
-
-  .first-name {
-    position: absolute;
-    top: 2.5em;
-    /* top: 2em; */
-    left: 2em;
-  }
-
-  .last-name {
-    position: absolute;
-    top: 2.5em;
-    left: 10em;
-  }
-
-  .email {
-    position: absolute;
-    top: 7em;
-    left: 2em;
-  }
-
-  .phone-number {
-    position: absolute;
-    top: 7em;
-    left: 10em;
-  }
-
-  .password {
-    position: absolute;
-    top: 11.5em;
-    left: 2em;
-  }
-
-  .password-confirm {
-    position: absolute;
-    /* top: 10.3em; */
-    top: 11.5em;
-    left: 10em;
-  }
-
-  label {
-    font-weight: 550;
-    font-size: small;
-  }
-
-  .form-labels label {
-    font-size: .7em;
-  }
-
-  .form-labels input {
-    width: 7.5em;
-    height: 2em;
-    border-radius: 5px;
-  }
+.bottom-info {
+  position: relative;
+  top: 10%;
+  left: 5%;
 }
