made some minor touch ups will continue to work on media queries for a responsive function

--- a/style.css
+++ b/style.css
@@ -24,6 +24,7 @@ body {
 /* Left side of the screen Image section */
 #image {
   position: relative;
+  /* position: absolute; */
   min-height: 100%;
   max-width: 33rem;
 }
@@ -33,11 +34,12 @@ body {
   width: 100%;
   height: 100%;
   object-fit: cover;
-  z-index: -1;
+  /* z-index: -1; */
 }
 
 .banner {
   position: absolute;
+  /* position: relative; */
   top: 13.5em;
   width: 100%;
   height: 8em;
@@ -46,8 +48,10 @@ body {
 
 .title-text {
   position: relative;
+  /* position: absolute; */
   color: whitesmoke;
   left: 3.3em;
+  right: 0%;
   top: -2.3em;
   opacity: 1;
   font-size: 60px;
@@ -55,9 +59,12 @@ body {
 
 .logo-container {
   position: relative;
+  /* position: absolute; */
   width: 100px;
-  height: 120px;
-  left: 5.5em;
+  height: auto;
+  /* left: 5.5em; */
+  object-fit: contain;
+  left: 13%;
 }
 
 
@@ -189,4 +196,190 @@ label {
   position: relative;
   top: 10%;
   left: 5%;
+}
+
+
+/* Extra small screen at width of 480px  */
+@media (max-width: 480px) {
+
+  /* Left side of the screen Image section */
+  #image {
+    position: relative;
+    /* position: absolute; */
+    min-height: 100%;
+    max-width: 33rem;
+  }
+
+  #image img {
+    flex: 1;
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    /* z-index: -1; */
+  }
+
+  .banner {
+    position: absolute;
+    /* position: relative; */
+    top: 14.5em;
+    width: 100%;
+    height: 8em;
+    background: rgba(24, 24, 24, 0.5);
+  }
+
+  .title-text {
+    position: relative;
+    /* position: absolute; */
+    color: whitesmoke;
+    left: 2.4em;
+    /* right: 0%; */
+    top: -2.1em;
+    opacity: 1;
+    font-size: 40px;
+  }
+
+  .logo-container {
+    position: relative;
+    /* position: absolute; */
+    /* width: 55px; */
+    width: 36.5%;
+    height: auto;
+    /* left: 5.5em; */
+    object-fit: contain;
+    top: 12%;
+    left: 13%;
+  }
+
+
+
+
+  /* Right side of the page where information, form, submit button is place */
+  #information {
+    display: flex;
+    flex-direction: column;
+    min-height: 100%;
+  }
+
+  /* Right side - Top section mostly paragraph text */
+  #top {
+    position: relative;
+    background-color: rgb(248, 246, 243);
+    min-height: calc(100% / 3);
+    width: 100%;
+    z-index: 2;
+  }
+
+  .p1-p2 {
+    position: relative;
+    font-size: 12px;
+    top: 60%;
+    left: 6.2%;
+  }
+
+  #paragraph-one {
+    max-width: 95%;
+  }
+
+  #paragraph-one #paragraph-two {
+    left: 2em;
+  }
+
+  p {
+    font-family: 'Cabin Sketch', cursive;
+  }
+
+
+
+
+  /* Right side - Middile section where form information is located */
+  .middle-container {
+    box-shadow: 0px 4px 7px rgb(211, 211, 211);
+    position: relative;
+    background-color: rgb(255, 255, 255);
+    min-height: calc(100% / 3);
+    width: 100%;
+    z-index: 1;
+  }
+
+  ul {
+    list-style-type: none;
+  }
+
+  #title {
+    position: absolute;
+    left: 6.2%;
+  }
+
+  label {
+    font-weight: 550;
+    font-size: small;
+  }
+
+  /* Right side -  Start of inputs located inside the form */
+  .first-name {
+    position: absolute;
+    top: 13%;
+    left: 6.2%;
+  }
+
+  .last-name {
+    position: absolute;
+    top: 13%;
+    left: 54%;
+  }
+
+  .email {
+    position: absolute;
+    top: 42%;
+    left: 6.2%;
+  }
+
+  .phone-number {
+    position: absolute;
+    top: 42%;
+    left: 54%;
+  }
+
+  .password {
+    position: absolute;
+    bottom: 8%;
+    left: 6.2%;
+  }
+
+  .password-confirm {
+    position: absolute;
+    bottom: 8%;
+    left: 54%;
+  }
+
+  .form-labels label {
+    font-size: .5em;
+  }
+
+  .form-labels input {
+    /* width: 45%; */
+    width: 4em;
+    height: 1.3em;
+    min-height: 1.5em;
+    border-radius: 5px;
+    font-size: 18px;
+    font-weight: bolder;
+  }
+
+
+
+  /* Bottom section with create account button */
+  #bottom {
+    position: relative;
+    background-color: rgb(248, 246, 243);
+    min-height: calc(100% / 3);
+    width: 100%;
+  }
+
+  .bottom-info {
+    position: relative;
+    top: 10%;
+    left: 5%;
+  }
+
 }
